<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/nav_grp1">
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/navigation_drawer_destination" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/navigation_drawer_travel" />
        <item
            android:id="@+id/nav_mytrips"
            android:icon="@drawable/mytrips"
            android:title="@string/my_trip" />
        <item
            android:id="@+id/nav_utility"
            android:icon="@drawable/ic_utilities"
            android:title="@string/navigation_drawer_utilities" />
        <item
            android:id="@+id/nav_medals"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/navigation_drawer_medals" />


    </group>

    <group android:checkableBehavior="single" android:id="@+id/nav_grp2">

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/navigation_drawer_signout" />
        <item android:id="@+id/nav_report_bug"
              android:icon="@drawable/ic_bug_report_black_24dp"
              android:title="@string/navigation_drawer_nav_report_bug"/>
    </group>

</menu>