<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow_1"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/item_title"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:gravity="start"
        android:text="@string/text_title"
        android:textColor="#ff4a4a4a"
        android:textSize="15sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#c7cfcecf"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:maxLines="10"
            android:text="@string/empty_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">


            <Button
                android:id="@+id/call"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1.0"
                android:background="@color/colorPrimary"
                android:text="@string/text_call"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/book"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1.0"
                android:background="@color/colorPrimary"
                android:text="@string/text_book"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>