<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activityAddNewTrip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".mytrips.AddNewTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/tname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/prompt_trip_name"
            android:maxLines="1"
            android:popupBackground="@color/white"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="text"
            tools:targetApi="lollipop" />
    </android.support.design.widget.TextInputLayout>

    <AutoCompleteTextView
        android:id="@+id/cityname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/prompt_city_name"
        android:popupBackground="@color/white"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/ampm_text_color"
        tools:targetApi="lollipop" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/sdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/prompt_start_date"
            android:inputType="text"
            android:maxLines="1"
            android:popupBackground="@color/white"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:targetApi="lollipop" />
    </android.support.design.widget.TextInputLayout>


    <com.dd.processbutton.FlatButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/prompt_add_trip"
        android:textColor="@color/white" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>